--- a/index.html
+++ b/index.html
@@ -55,10 +55,19 @@
         background-color: #FAF9F6;
         color: #2C2420;
         overflow-x: hidden;
+        /* Hide default cursor for custom implementation on non-touch devices */
+        cursor: none;
         /* Subtle Film Grain Texture */
         background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.04'/%3E%3C/svg%3E");
       }
       
+      /* Restore cursor for touch devices */
+      @media (hover: none) and (pointer: coarse) {
+        body {
+          cursor: auto;
+        }
+      }
+
       /* Premium Glassmorphism - The "Lens" Effect */
       .glass {
         background: rgba(255, 255, 255, 0.65);
